[package]
name = "ners"
default-run = "ners_bin"
version = "0.1.0"
authors = ["Dennis Kempin <dennis.kempin@gmail.com>"]
edition = "2021"
rust-version = "1.62"

[[bin]]
name = "ners_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
egui = "0.18"
eframe = "0.18"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8" }
anyhow = "1.0"
wasm-timer = "0.2"
lazy_static = "*"
bitflags = "1.3"
regex = "1.6"
konst = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"

[profile.dev]
opt-level = 1  # 10x faster tests with a little optimization.

