[package]
name = "res_libretro"
version = "0.1.0"
authors = ["Dennis Kempin <dennis.kempin@gmail.com>"]
edition = "2021"
rust-version = "1.65"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.139"
log = "0.4.17"
res_emulator = { path = "../res_emulator" }
libretro-rs = { version = "0.1.3" }
